# ai-summary-app

./: readme.md
ai-document-summary-mobile/: .env  app.json  tsconfig.json
ai-document-summary-mobile/app/: index.tsx
ai-document-summary-mobile/app/(auth)/: sign-up.tsx
ai-document-summary-mobile/components/: theme-toggle.tsx
ai-document-summary-mobile/lib/: axios.ts  query-client.tsx
ai-document-summary-mobile/utils/: user-store.tsx
client/: .cta.json  .env  package.json  pnpm-lock.yaml
client/src/: main.tsx  router.tsx
client/src/lib/: axios.ts  (+1 more)
docs/: 01.frontend.md  02.backend.md  03.ai-service.md  be-aws-services.md  fe-aws-services.md  questions.md  techstack.md
mobile/: .env.example  package.json  pnpm-lock.yaml
mobile/app/: _layout.tsx
server/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml  template.yaml
server-2/: .env.example  .gitignore  docker-compose.yml  pyproject.toml
server-2/src/: main.py
server-2/src/core/: base_repo.py  config.py  database.py  deps.py
server-2/src/helpers/: __init__.py  lambda_func.py  llm.py  s3.py
server-2/src/routers/: router.py
server-2/src/routers/ai_summary/: dependencies.py  handler.py  route.py
server-2/src/routers/auth/: dependencies.py  repository.py  route.py  schema.py  service.py
server-2/src/routers/document_upload/: dependencies.py  route.py
server-2/src/routers/users/: dependencies.py  model.py  repository.py  route.py  schema.py  service.py
server-2/src/security/: auth_handler.py  hash_helper.py
server-2/src/utils/: init_db.py
server/src/: main.py
(+42 files in other folders)
