[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "boto3>=1.43.46",
    "fastapi>=0.139.0",
    "openai>=2.45.0",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "python-decouple>=3.8",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]
